--- a/OpenCVCameraExample3/app/src/main/AndroidManifest.xml
+++ b/OpenCVCameraExample3/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.opencvcameraexample3">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -25,6 +26,7 @@
         android:smallScreens="true" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
