--- a/OpenCVCameraExample3/app/src/main/AndroidManifest.xml
+++ b/OpenCVCameraExample3/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.opencvcameraexample3">
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -26,18 +26,20 @@
         android:smallScreens="true" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OpenCVCameraExample3">
+        android:theme="@style/Theme.OpenCVCameraExample3"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".CarListActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
