--- a/OpenCVCameraExample3/app/src/main/AndroidManifest.xml
+++ b/OpenCVCameraExample3/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OpenCVCameraExample3"
         android:usesCleartextTraffic="true">
-        <activity android:name=".CarListActivity"></activity>
+        <activity android:name=".Vis_CarListActivity"></activity>
+        <activity android:name=".CarListActivity" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
