--- a/OpenCVCameraExample3/app/build.gradle
+++ b/OpenCVCameraExample3/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation project(path: ':sdk')
     implementation('com.google.firebase:firebase-bom:28.0.1')
     implementation('com.google.firebase:firebase-analytics:17.2.3')
+    implementation platform('com.google.firebase:firebase-bom:26.5.0')
+    implementation 'com.google.firebase:firebase-storage'
     testImplementation 'junit:junit:4.+'
     compile 'com.rmtheis:tess-two:6.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
