--- a/OpenCVCameraExample3/app/build.gradle
+++ b/OpenCVCameraExample3/app/build.gradle
@@ -46,9 +46,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation project(path: ':sdk')
     implementation('com.google.firebase:firebase-bom:28.0.1')
-    implementation('com.google.firebase:firebase-analytics:17.2.3')
-    implementation platform('com.google.firebase:firebase-bom:26.5.0')
+    implementation('com.google.firebase:firebase-analytics')
+    implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-storage'
+
     testImplementation 'junit:junit:4.+'
     compile 'com.rmtheis:tess-two:6.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
