--- a/OpenCVCameraExample3/app/build.gradle
+++ b/OpenCVCameraExample3/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation('com.google.firebase:firebase-analytics')
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     testImplementation 'junit:junit:4.+'
     compile 'com.rmtheis:tess-two:6.3.0'
