--- a/OpenCVCameraExample3/app/src/main/AndroidManifest.xml
+++ b/OpenCVCameraExample3/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -35,7 +35,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OpenCVCameraExample3"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Vis_CarListActivity"></activity>
+        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".Vis_CarListActivity" />
         <activity android:name=".CarListActivity" />
         <activity
             android:name=".MainActivity"
