CarListActivity와 Vis_CarListActivity 실행 시 자동으로 키보드 뜨는 기능 제거

--- a/OpenCVCameraExample3/app/src/main/AndroidManifest.xml
+++ b/OpenCVCameraExample3/app/src/main/AndroidManifest.xml
@@ -42,9 +42,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".Vis_CarListActivity" />
-        <activity android:name=".CarListActivity" />
+        <activity android:name=".DetailActivity"/>
+        <activity android:name=".Vis_CarListActivity"
+            android:windowSoftInputMode="stateAlwaysHidden">
+        </activity>
+        <activity android:name=".CarListActivity"
+            android:windowSoftInputMode="stateAlwaysHidden">
+        </activity>
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
